add business and user logic in js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <form>
+      <form id="favform">
         <div class="form-group">
           <label>1. What is one of your favorite things?</label>
           <input class="form-control" id="favthing1" placeholder="Type here!">
@@ -30,6 +30,12 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+      <div class="return">
+        <p id="first"></p>
+        <p id="second"></p>
+        <p id="third"></p>
+        <p id="fourth"></p>
+      </div>
     </div>
   </body>
 </html>
