add list in html, function prints individual items into list

--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <div class="return">
-        <p id="first"></p>
-        <p id="second"></p>
-        <p id="third"></p>
+        <ul>
+          <li id="first"></li>
+          <li id="second"></li>
+          <li id="third"></li>
+        </ul>
+        <p ></p>
+        <p ></p>
+        <p></p>
         <p id="fourth"></p>
       </div>
     </div>
